fix spacing for lyrics

--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -691,7 +691,7 @@ body{
            color: white;
             font-weight: bold;
         }
-        @media screen and (min-width: 40em){
+        @media screen and (min-width: 40em) and (max-width: 64em){
             margin-left: 8.33333%;
         }
     }
